--- a/index.html
+++ b/index.html
@@ -1,35 +1,46 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moveis Customizados</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>UseZaha</title>
+    <!-- <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@500;700&display=swap"
+      rel="stylesheet"> -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap"
+      rel="stylesheet"
+    />
 
-</head>
-<body>
-    
-    <div id="hero">
-        <img src="https://storage.googleapis.com/golden-wind/explorer/description-assets/nivel-02/01/img1.jpeg" alt="Desenho de uma pessoa vestido de uma camisa amarela em uma sala com movéis">
-        <h1>Ambientes <span>Únicos</span> para você!</h1>
-            <p>Nós criamos ambientes <strong>exclusívos</strong> e <strong>únicos</strong>, com muito bom gosto e profissionalismo, investimos tempo e <span>dedicação no seu projeto</span>.
-        <br>
-        <br>
-            Tenha <span>ambientes limpos</span> e bem decorados, transmitindo <strong>elegância</strong> e <strong>finesse</strong> para todo aquele que estiver ali</p>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body class="pink">
+    <h1>Fale conosco!</h1>
+    <h3>Entre em contato</h3>
+    <p>&nbsp;&nbsp;&nbsp;Olá, amores! Tudo bem? Está com alguma dúvida <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ou quer fechar um pedido?<br>&nbsp;&nbsp;&nbsp;Fala com a gente no whatsapp ou visite nossa loja.</p>
+   
+   
+    <main class="container">
+      <ul>        
+        <li>
+          <a
+            href="https://api.whatsapp.com/send?phone=5583987633925&text=Ol%C3%A1,%20ZAHA%20Pratas!"
+            target="_blank"
+            >Whatsapp ZAHA</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://maps.app.goo.gl/b2LaDY3NEtrHiCbm9"
+            target="_blank"
+            >Localização</a
+          >
+        </li>
+        
 
 
-    </div>
-    <div id="Footer">
-        <div id="line"></div>
-        <a target="_blank"
-        href="https://www.instagram.com/moveisparavoce/">Instagram</a>
-        <a href="mailto:contato@moveisparavoce.com">Fale Conosco</a>
-    </div>
-    <img src="https://storage.googleapis.com/golden-wind/explorer/description-assets/nivel-02/01/balls.svg" alt="Bolinhas laranja no canto direito inferior da tela">
-
-<body>
+    </main>
+  </body>
 </html>
